--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,13 @@
     <title>NeroCodes</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-    <header id="home">
-        <h1>Yooo! I'm Oghenero Paul-Ejukorlem</h1>
+    <header id="home" class="home">
+        <h1>Yooo! I'm <span class="color">Oghenero Paul-Ejukorlem</span></h1>
         <h2>Front End Developer</h2>
-        <button>Check Out My Work</button>
+        <a href="#about"><button>Check Out My Work</button></a>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
